2005-10-02 Bernhard Kraft  <kraftb@kraftb.at>

	* Integrated content-slide extension into core
	(http://wiki.typo3.org/index.php/Extensions_for_the_core)
	* Implemented "requestUpdate" feature of TCEforms for Flexform fields

2005-09-19 Martin Kutschker <martin.t.kutschker@blackbox.net>

	*  Fixed bug #1287: Detect Opera as Netscape3 (making image roll-overs work)

2005-09-18 Michael Stucki <michael@typo3.org>

	* If the encryption key is not set, the warning in the backend now contains a link to the according section.
	* be_group can no longer be selected as a subgroup of itself
	* Merged fenestgrp extension into Core. This makes it possible to select subgroups for fe_groups. Thanks to Glen Gibb.
	* Merged ingmar_accessctrl extension into Core. Content elements and pages can now have access for more than only one group. Thanks to Ingmar Schlecht for his nice extension.
	* Fixed a bug in the object browser: Adding properties copied key + value into the key field. Notice: This requires an additional patch in the tstemplate_objbrowser extension!
	* Some typo fixes
	* New property for TYPO3_CONF_VARS[SYS][displayErrors]: If set to 2, display_errors will only be enabled if the devIPmask matches the current clients IP address.

2005-09-14 Karsten Dambekalns <karsten@typo3.org>

	* Fixed bug #214 (flexform default values), as it has been reported to work with the existing patch.

2005-09-13 Ingmar Schlecht <ingmar@typo3.org>

	* Fixed bug #1375: Made typo3/mod/tools/em/index.php use preg_quote() on filename before passing it to preg_match()

2005-09-13 Karsten Dambekalns <karsten@typo3.org>

	* Fixed the page is being generated page refreshing to the wrong page when query parameters are used.
	* Fixed (part of) bug 1312 (showpic.php).

2005-08-22 Martin Kutschker <martin.t.kutschker@blackbox.net>

	* Fixed bug #24: Modified the JS layer code so that GMENU_LAYERS work with Opera (3.8 patch port by Michael Stucki)

2005-08-16  Michael Stucki  <michael@typo3.org>
